Read csv + send email
Reads the CSV file and then sends email including the attachment.

--- a/ReadCSV/ReadCSV.csproj
+++ b/ReadCSV/ReadCSV.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="pass.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.1.0" />
   </ItemGroup>
 
